@@ -285,6 +285,8 @@ enum AVCodecID {
     AV_CODEC_ID_HEVC,
     AV_CODEC_ID_FIC,
     AV_CODEC_ID_SGIRLE,
+    AV_CODEC_ID_MVC1,
+    AV_CODEC_ID_MVC2,
 
     /* various PCM "codecs" */
     AV_CODEC_ID_FIRST_AUDIO = 0x10000,     ///< A dummy id pointing at the start of audio codecs
