@@ -5,6 +5,7 @@ version <next>:
 - compand audio filter
 - shuffleplanes filter
 - Silicon Graphics RLE 8-bit video decoder
+- Silicon Graphics Motion Video Compressor 1 & 2 decoder
 
 
 version 10:
